--- a/src/css/maths.css
+++ b/src/css/maths.css
@@ -74,3 +74,10 @@
     opacity: 0;
     z-index: 9999999;
   }
+
+  .notificationText {
+    color: #1A365D;
+    /* font-family: "'DM Sans', sans-serif"; */
+    font-weight: 700;
+    background-color: transparent;
+  }
